# tsdda

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
fdda/: __init__.py  dshuffle.py  fraug.py  staug.py  wavem.py
fdda/augment/: d_shuffle.py  fr_aug.py  st_aug.py  wave_aug.py
pdda/: __init__.py
pdda/augment/: augmenter.py  st_aug.py
pdda/augments/: d_shuffle.py  fr_aug.py  st_aug.py  wave_aug.py
pdda/core/: __init__.py  base.py  utils.py
tsdda/: __init__.py
tsdda/augments/: d_shuffle.py  fr_aug.py  st_aug.py  wave_aug.py
tsdda/core/: __init__.py  types.py
