[tool.poetry]
name = "python-dda"
version = "0.4.0"
description = "Domain Data Augmentation for time-series data"
authors = ["Michael Verdegaal <michaelverdegaal@hotmail.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
emd-signal = "^1.6.4"
pywavelets = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
matplotlib = "^3.9.2"

[tool.commitizen]
version = "0.4.0"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:^version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
